fixed small layout bug

--- a/README.html
+++ b/README.html
@@ -1,5 +1,5 @@
 <h1 id="github-repository-file-tree-generator">Github Repository File Tree Generator</h1>
-<h3 id="-link-http-github-file-tree-generator-herokuapp-com-"><a href="http://github-file-tree-generator.herokuapp.com/">Link</a></h3>
+<h3 id="-check-it-out-here-http-github-file-tree-generator-herokuapp-com-"><a href="http://github-file-tree-generator.herokuapp.com/">Check it out here!</a></h3>
 <p>This web app aims to help developers find files and folders nested deep in Github repositories. Navigate to the repo you want to graph, insert the repo link, and submit the form to see a visual representation of the repo structure. </p>
 <p>After the graph renders, click on a file or folder to be taken there on Github!</p>
 <h3 id="built-using-">Built using...</h3>
